--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,12 @@ body {
   opacity: 1;
 }
 
+/* .player {
+  background: rgba(255, 255, 255, 0.404);
+  border-radius: 10px;
+  padding: 10px;
+} */
+
 .player-icon:active,
 .slider-icon:active,
 .change-quote:active {
@@ -126,6 +132,9 @@ body {
   width: 180px;
   min-height: 180px;  
   text-align: left;
+  background: rgba(255, 255, 255, 0.496);
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 .weather-error {
@@ -145,7 +154,7 @@ body {
 }
 
 .city {
-  width: 170px;
+  width: 150px;
   height: 34px;
   padding: 5px;
   font-size: 20px;
